# fasttext-server

./: CMakeLists.txt  README.md
config/: httpd.conf
include/: action.h  croco.h  responder.h
include/uv/: http.h  route.h  uri.h
src/: CMakeLists.txt  httpd.cpp  main.cpp  responder.cpp
src/action/: CMakeLists.txt  vectors.cpp
src/croco/: CMakeLists.txt  di.cpp  ini_parser.cpp  logger.cpp
src/uv/: CMakeLists.txt  http-client.cc  http-server.cc  http.cc  route.cc
